hphp/hack/test/typecheck/__callStatic.php.exp
File "__callStatic.php", line 10, characters 12-23:
__callStatic is a magic method and cannot be called directly (NastCheck[3011])
